# lmah-inventory-rs

./: .env.example  .envrc  .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  devenv.nix
.github/workflows/: release.yml
migrations/: 20260318135324_initial.sql
src/: README.md  main.rs
src/cli/: migration.rs  mod.rs
src/server/: mod.rs
src/server/database/: has_table.rs  insert.rs  mod.rs  queries.rs  select.rs  update.rs
src/server/models/: clients.rs  config.rs  events.rs  facture_items.rs  factures.rs  mod.rs  payments.rs  product_types.rs  products.rs  refunds.rs  statuts.rs
src/server/routes/: auth.rs  bootstrap.rs  clients.rs  errors.rs  events.rs  factures.rs  middleware.rs  misc.rs  mod.rs  redirect.rs
src/server/services/: admin.rs  clients.rs  config.rs  events.rs  factures.rs  factures_toasty.rs  filename.rs  mod.rs  payments.rs  print.rs  products.rs  refunds.rs  statuts.rs  storage.rs  users.rs
src/server/templates/: clients.rs  events.rs  factures.rs  misc.rs  mod.rs  utils.rs
src/server/utils/: mod.rs  money.rs  streaming.rs
static/css/: style.css
static/js/: jquery-datepicker-fr.min.js
tests/: client_routes_test.rs  event_routes_test.rs  facture_routes_test.rs
tests/fixtures/: clients.rs  events.rs  factures.rs  mod.rs
tests/http/: helpers.rs
tests/snapshots/: client_routes_test__get_client_form_prepopulated.snap  client_routes_test__get_client_success.snap  client_routes_test__list_clients_content.snap  client_routes_test__list_clients_empty.snap  client_routes_test__list_clients_multiple.snap  client_routes_test__new_client_form.snap  event_routes_test__get_event_success.snap  event_routes_test__list_events_content.snap  event_routes_test__list_events_empty.snap  event_routes_test__list_events_multiple.snap  event_routes_test__new_event_form.snap  facture_routes_test__list_factures_empty.snap  facture_routes_test__list_factures_with_data.snap
