[package]
name = "lmah-inventory-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
clap = { version = "4.6.0", features = ["derive", "env"] }
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
maud = { version = "*", features = ["axum"] } # templates
tower-http = { version = "0.6.8", features = ["fs", "util"] } # static files
listenfd = "1.0.2" # file descriptor listen (paired with systemfd)
itertools = "0.14.0"

# dev
[dev-dependencies]
insta = "1.47.0"
tower = "0.5.3"
tower-http-util = "0.1.0"
