[package]
name = "lmah-inventory-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version ="0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["cookie", "cookie-private"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
maud = { version = "*", features = ["axum"] } # templates
tower-http = { version = "0.6.8", features = ["fs", "util"] } # static files
listenfd = "1.0.2" # file descriptor listen (paired with systemfd)
oauth2 = "5.0.0"
hex = "0.4.3"
time = "0.3.47"
reqwest = { version = "0.13.2", features = ["stream", "form"] }
futures-core = "0.3.32"
google-cloud-auth = { version = "1.9.0", features = ["default-rustls-provider"] }
google-cloud-storage = { version = "1.11.0", features = ["default-rustls-provider"] }
futures-util = "0.3.32"
rustls = { version = "0.23.39", features = ["aws_lc_rs"] }
csv = "1.4.0"
axum-streams = { version = "0.25.0", features = ["csv"] }

# dev
[dev-dependencies]
insta = "1.47.0"
tower = "0.5.3"
tower-http-util = "0.1.0"
