[package]
name = "lmah-inventory-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version ="0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["cookie", "cookie-private"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
maud = { version = "*", features = ["axum"] } # templates
tower-http = { version = "0.6.8", features = ["fs", "util"] } # static files
listenfd = "1.0.2" # file descriptor listen (paired with systemfd)
oauth2 = "5.0.0"
hex = "0.4.3"
time = "0.3.47"
reqwest = { version = "0.13.2", features = ["stream", "form"] }
futures-core = "0.3.32"
google-cloud-auth = { version = "1.9.0", features = ["default-rustls-provider"] }
google-cloud-storage = { version = "1.11.0", features = ["default-rustls-provider"] }
futures-util = "0.3.32"
rustls = { version = "0.23.39", features = ["aws_lc_rs"] }
csv = "1.4.0"
axum-streams = { version = "0.25.0", features = ["csv"] }

# dev
[dev-dependencies]
insta = "1.47.0"
tower = "0.5.3"
tower-http-util = "0.1.0"

# Source: https://emschwartz.me/your-clippy-config-should-be-stricter/#my-configs
# and: https://billylevin.dev/posts/clippy-config/
[lints.clippy]
# Don't Panic - prevent panics from unwraps and unsafe slicing or indexing
string_slice = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"
# Optional - see post for caveats
# expect_used = "warn"
# arithmetic_side_effects = "warn"

# Don't Fail Silently - prevent dropped futures and swallowed errors
let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"

# Don't Do Bad Async Stuff - prevent deadlocks and concurrency bugs
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"  # only relevant on editions before 2024
large_futures = "warn"

# Don't Do Unsafe Things with Memory
mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"

# Don't Do Potentially Incorrect Things with Numbers
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"
# Optional - these effectively force you to document numeric invariants
# cast_possible_wrap = "warn"
# cast_precision_loss = "warn"
# cast_possible_truncation = "warn"

# Don't Do Bad Things That are Easy to Avoid
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"

# Don't `allow` Your Way Around These Lints - every suppression must be
# a deliberate #[expect(..., reason = "…")] rather than a silent #[allow]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"